--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,15 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+/* Asegúrate de que el cuerpo o contenedor principal ocupe toda la altura */
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+#app { /* O el contenedor principal de tu aplicación */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Esto asegura que se ocupe al menos la altura completa de la pantalla */
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+main {
+  flex: 1; /* El contenido principal ocupa el espacio restante */
 }
